# HILFIGER

./: README.md  control.py  github_setup.txt  hak.sh  meeting.txt  session_hak.yml  start_hak.sh  test.cpp  test.txt
BM1/bwh/src/: keyboard_control.cpp  setup.sh
BM2/: fbm2_launch.sh
BM2/carrot_ws/: README.txt  dependencies.txt  fbm2_solution.py
BM3/: img2vid.py
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/carrot_team/: poi.h
devel/lib/carrot_team/: control_main  keyboard_control
devel/lib/pkgconfig/: carrot_team.pc
devel/lib/python3/dist-packages/carrot_team/msg/: __init__.py  _poi.py
devel/share/carrot_team/cmake/: carrot_team-msg-extras.cmake  carrot_team-msg-paths.cmake  carrot_teamConfig.cmake
devel/share/common-lisp/ros/carrot_team/msg/: _package.lisp  _package_poi.lisp  carrot_team-msg.asd  poi.lisp
devel/share/gennodejs/ros/carrot_team/msg/: _index.js  poi.js
devel/share/roseus/ros/carrot_team/: manifest.l
devel/share/roseus/ros/carrot_team/msg/: poi.l
src/carrot_team/: CMakeLists.txt  package.xml
src/carrot_team/include/carrot_team/: class.hpp  orientation.hpp
src/carrot_team/launch/: control_and_rec.launch
src/carrot_team/scripts/: check_poi.py  check_section.py  check_still.py  control.py  crack_bbox.py  depth_udlr.py  get_img.py  mapping.py  mapping_0417_fail.py  mapping_new.py  mapping_new_0414.py  poi_angle.py  square_bbox.py  sub_img.py  sub_poi.py  yolo_ros.py
src/carrot_team/src/: check_poi.py  control.py  control_main.cpp  get_depth.py  get_img.py  keyboard_control.cpp  mapping.py  sample.cpp  sub_img.py  sub_poi.py  subscribe_img.py  vehicle_to_poi.cpp  yolo_ros.py
src/carrot_team/src/modules/: class.cpp  orientation.cpp
